--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <meta charset="utf-8">
-      <title>Lorenzo's Solo Project</title>
+      <title>onoGrindz</title>
       <!-- <script src="https://unpkg.com/lodash@4.17.20"></script> -->
     </head>
     <body>
